The paragraphs under the role titles looked weird. Fixed spacing and semantics.

--- a/css/outer/jobs/jobs.less
+++ b/css/outer/jobs/jobs.less
@@ -13,7 +13,6 @@
   h2 {
     font-size: 36px;
     text-align: center;
-    padding-top: 50px;
     padding-top: 30px;
   }
   h3 {
@@ -77,7 +76,8 @@
   .jobs-listings {
     h3 {
       margin: 1em 0 0;
-      padding-bottom: .5em;
+      padding-bottom: .3em;
+      margin-bottom: .5em;
       box-shadow: 0 1px @grayBoxBorder;
     }
     ul {
